# tdcs_dance_svc

./: Makefile  README.md  pyproject.toml
migrations/: env.py
src/tdcs_dance_svc/: app.py  email_reminder.py  main.py  notification.py
src/tdcs_dance_svc/models/: appointment.py  base.py
src/tdcs_dance_svc/routers/: appointment.py  google_auth.py
tests/: conftest.py  test_appointment.py  test_appointment_email_reminder_integration.py  test_appointment_notification.py  test_email_reminder.py  test_google_auth.py  test_notification.py
